# PGB

./: LICENSE.md
firstProject/: CMakeLists.txt  main.cpp  testDialog.cpp  testDialog.h
